<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:padding="25dp"
    android:stretchColumns="*"
    android:theme="@style/NoWindow">

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reset_password_title"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/Ash_Gray"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/question_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/custom_dialog_password_question"
            android:inputType="text"
            android:textColor="#000"
            android:textColorHint="@color/fbutton_color_asbestos" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/custom_dialog_password_answer"
            android:inputType="text"
            android:textColor="#000"
            android:textColorHint="@color/fbutton_color_asbestos" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <info.hoang8f.widget.FButton
            android:id="@+id/password_dialog_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_password_save_button" />

    </TableRow>


</TableLayout>