<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/work_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardView_margin"
        app:cardCornerRadius="@dimen/cardCornerRadius">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="*">


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/show_work_tvName"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tvWorkName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/default_value"
                    android:textSize="@dimen/tvSizePoint"
                    android:textAlignment="center"/>

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/show_work_tvCondition"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tvCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/default_value"
                    android:textSize="@dimen/tvSizePoint"
                    android:textAlignment="center"/>

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/show_work_tvPoint"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tvPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padTextView"
                    android:text="@string/default_value"
                    android:textSize="@dimen/tvSizePoint"
                    android:textAlignment="center"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_work_tvDate"
                    android:padding="@dimen/padTextView"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--/--/--"
                    android:padding="@dimen/padTextView"
                    android:textSize="@dimen/tvSizePoint"
                    android:id="@+id/tvDate"
                    android:textAlignment="center"/>
            </TableRow>


        </TableLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>