<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:stretchColumns="*"
    tools:context=".LoginActivity">


        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/lock"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/editText_password"
                android:inputType="textPassword" />

        </com.github.florent37.materialtextfield.MaterialTextField>




    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/save_pass"
                android:textSize="@dimen/button_textSize"
                android:id="@+id/tv_login_SavePass"
                android:padding="@dimen/padTextView"
                android:layout_marginRight="20dp"
                android:shadowColor="#eaeaea"/>

            <info.hoang8f.widget.FButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_next"
                android:textSize="@dimen/button_textSize"
                android:id="@+id/tv_login_next"
                android:padding="@dimen/padTextView"
                android:shadowColor="#eaeaea" />


        </TableRow>

    </TableLayout>

</LinearLayout>