<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



        <EditText
            android:id="@+id/date_increase_decrease_year_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_update_edit_text_year"
            android:textColor="#000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:id="@+id/year_increase_button"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:id="@+id/year_decrease_button"/>
        </LinearLayout>


        <EditText
            android:id="@+id/date_increase_decrease_month_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_update_edit_text_month"
            android:textColor="#000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:id="@+id/month_increase_button"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:id="@+id/month_decrease_button"/>
        </LinearLayout>



        <EditText
            android:id="@+id/date_increase_decrease_day_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_update_edit_text_day"
            android:textColor="#000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:id="@+id/day_increase_button"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:id="@+id/day_decrease_button"/>
        </LinearLayout>




</LinearLayout>